welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:5: error: '(' expected but identifier found.
	if !estSurBiscuit {
           ^RunFour:10: error: illegal start of simple expression
	}
        ^