welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit=0
while (estSurBiscuit) {
  avance()
}
	if !estSurBiscuit {
    avance()
    nbBiscuit=nbBiscuit+1
  }